update contact form to send without api

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-	--primary-color: #120d47;
+	--primary-color: #031319;
 	--secondary-color: #55AA20;
 	--accent-color: #3b82f6;
 	--dark-color: #1e293b;
